Fixed flexbox layout issue for IE and older browsers

--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -1,3 +1,24 @@
+html, body {
+  height: 100%;
+}
+
+body {
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+}
+
+// FIX FIREFOX flexbox
+@-moz-document url-prefix() {
+ #flexible-content{
+      flex: 1;
+    }
+}
+.main_body {
+  -ms-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
+}
 
 // TOAST
 md-toast.md-success-toast-theme {
